--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ env:
   DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
   # AWS & Elastic Bean Stalk
   AWS_REGION: ap-northeast-2
-  EB_ENVIRONMENT_NAME: Deployment-env
+  EB_ENVIRONMENT_NAME: OneLine-env-2
   EB_APPLICATION_NAME: One Line
   EB_DEPLOYMENT_PACKAGE: Dockerrun.aws.json
 
